shift correction

--- a/assets/sass/pages/collezioni/_pc.scss
+++ b/assets/sass/pages/collezioni/_pc.scss
@@ -41,8 +41,8 @@ body {
     top: 18vh;
     margin-left: auto;
     margin-right: auto;
-    left: 0;
-    right: 0;
+    left: 25%;
+    right: 25%;
     text-align: center;
     height: 65vh;
     aspect-ratio: 4 / 3;
